GNOME Bugzilla – Bug 669393
Distinguish between GArray and GPtrArray when cleaning up
Last modified: 2012-02-06 14:11:04 UTC
Created attachment 206811 [details] [review] Patch that fixes this issue This fixes a crash in test_gi.TestGPtrArray and makes sure memory is free'd correctly. You'll need latest gobject-introspection from master for all tests to pass.
I can reproduce the crash in the test suite, seems a recent glib changed some handling there. The crash was not introduced by any particular pygobject commit, I checked that with git bisect. The patch looks fine to me, and I confirm that it fixes the crash. +1 from me. Thank you for fixing this!
Pushed.