Distinguish between GArray and GPtrArray when cleaning up

This fixes a crash in test_gi.TestGPtrArray and makes sure
memory is free'd correctly

https://bugzilla.gnome.org/show_bug.cgi?id=669393